--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -136,5 +136,7 @@ source "drivers/staging/ramster/Kconfig"
 
 source "drivers/staging/ozwpan/Kconfig"
 
+source "drivers/staging/prima/Kconfig"
+
 endif # STAGING
 
