--- a/arch/arm/configs/ud_nx_defconfig
+++ b/arch/arm/configs/ud_nx_defconfig
@@ -1614,6 +1614,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
