--- a/arch/arm/configs/ud_nx_defconfig
+++ b/arch/arm/configs/ud_nx_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.87 Kernel Configuration
+# Linux/arm 3.4.90 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -545,7 +545,6 @@ CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
 CONFIG_ARM_DMA_MEM_BUFFERABLE=y
 CONFIG_ARCH_HAS_BARRIERS=y
-# CONFIG_VCM is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 CONFIG_ARM_NR_BANKS=8
 # CONFIG_RESERVE_FIRST_PAGE is not set
@@ -2523,6 +2522,7 @@ CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 # CONFIG_HID_BATTERY_STRENGTH is not set
 # CONFIG_HIDRAW is not set
+CONFIG_UHID=y
 
 #
 # USB Input Devices
